--- a/dialog/dialog.html
+++ b/dialog/dialog.html
@@ -2,6 +2,7 @@
 <div class="dialog" ng-click="vm.clickOnElement();$event.stopPropagation()" ng-if="vm.isShown">
   <div class="dialog-arrow"></div>
   <div class="dialog-wrap">
+    <span ng-if="vm.closeIcon" ng-click="vm.hide()" class="ion-ios-close-empty"></span>
     <div>{{text}}</div>
     <div ng-transclude="dialogContent"></div>
   </div>
