--- a/src/checkbox/checkbox.html
+++ b/src/checkbox/checkbox.html
@@ -1,3 +1,3 @@
-<input type="checkbox" id="{{vm.bindId}}" name="{{vm.bindId}}" ng-model="vm.bindModel">
+<input type="checkbox" id="{{vm.bindId}}" name="{{vm.bindId}}" ng-model="vm.model">
 <label tabindex="0" class="checkbox-icon" for="{{vm.bindId}}"></label>
 <label for="{{vm.bindId}}">{{vm.label}}</label>
