--- a/src/custom-input/custom-input.html
+++ b/src/custom-input/custom-input.html
@@ -14,10 +14,10 @@
       <dialog-content>
         <div ng-repeat="item in vm.itemsFiltered track by $index"
           class="row-autocomplete"
-          ng-click="vm.model = item" num="$index + 100000000" model="vm.model" compile-template>
+          ng-click="vm.model = item"  model="vm.model">
           <span ng-if="vm.autoCompleteRow" ng-bind-html='vm.autoCompleteRow' compile-template >
           </span>
-          <span ng-if="!vm.autoCompleteRow">
+          <span ng-if="!vm.autoCompleteRow" num="$index + 100000"  model="vm.model" compile-template>
             {{item}}
           </span>
         </div>
