--- a/src/custom-input/custom-input.html
+++ b/src/custom-input/custom-input.html
@@ -1,15 +1,27 @@
 <div class="custom-input">
   <label ng-if="vm.label" for="{{vm.bindId}}">{{vm.label}}</label>
   <div class="input-container" ng-click="vm.modalAutocompleteOpen=true">
-    <input ng-if="!vm.$transclude.isSlotFilled('input')"
-      type="{{vm.type}}"
-      name="{{vm.bindName || vm.bindId}}"
-      id="{{vm.bindId}}"
-      ng-model="vm.model"
-      placeholder="{{vm.placeholder}}"
-    />
+    <div ng-if="!vm.$transclude.isSlotFilled('input') && vm.type != 'datepicker'">
+        <input
+        type="{{vm.type}}"
+        name="{{vm.bindName || vm.bindId}}"
+        id="{{vm.bindId}}"
+        ng-model="vm.model"
+        placeholder="{{vm.placeholder}}"
+      />
+    </div>
+    <div ng-if="!vm.$transclude.isSlotFilled('input') && vm.type == 'datepicker'">
+      <datepicker ng-init="vm.getCurrentDate()" date="vm.model"  >
+          <input  class='datepicker-input'
+                  ng-click="$event.stopPropagation();"
+                  ng-model="vm.model" input-date>
+          <i class="fa fa-calendar-o fa-fw" ></i>
+      </datepicker>
+    </div>
+
     <span ng-transclude="input" ng-if="vm.$transclude.isSlotFilled('input')"></span>
     <span class="icon" ng-if="vm.icon || vm.iconClass" ng-class="vm.iconClass"><span ng-bind="vm.icon"></span></span>
+
     <div ng-if="vm.type == 'autoComplete'" dialog class="no-arrow left autocomplete" is-open="vm.dialogOpen">
       <dialog-content>
         <div ng-repeat="item in vm.itemsFiltered track by $index"
