--- a/src/custom-input/custom-input.html
+++ b/src/custom-input/custom-input.html
@@ -52,7 +52,7 @@
     ng-class="{{true ? 'valid' : 'invalid'}}">
     <a tooltip class="tooltip-light tooltip-right ion-ios-close-outline">
       <span ng-repeat="(error, value) in vm.formField.$error" ng-message="error">
-        {{vm.formField.$errorMsg[error] || vm.defaultErrorMsg[error] || 'שגיאה'}}<br>
+        {{vm.errorMessage[error] || vm.defaultErrorMsg[error] || 'שגיאה'}}<br>
       </span>
     </a>
   </span>
