--- a/src/custom-input/custom-input.html
+++ b/src/custom-input/custom-input.html
@@ -50,7 +50,7 @@
     ng-show="vm.formField.$dirty && vm.formField.$invalid"
     class="validation"
     ng-class="{{true ? 'valid' : 'invalid'}}">
-    <a tooltip class="tooltip-light tooltip-right ion-ios-close-outline">
+    <a class="tooltip tooltip-light tooltip-right {{ vm.formField.$error.pending ? 'fa fa-fw fa-spin ion-load-c pending' : 'ion-ios-close-outline'}}">
       <span ng-repeat="(error, value) in vm.formField.$error" ng-message="error">
         {{vm.errorMessage[error] || vm.defaultErrorMsg[error] || 'שגיאה'}}<br>
       </span>
