--- a/src/custom-input/custom-input.html
+++ b/src/custom-input/custom-input.html
@@ -1,7 +1,7 @@
 <div class="custom-input">
   <label ng-if="vm.label" for="{{vm.bindId}}">{{vm.label}}</label>
   <div class="input-container" ng-click="vm.dialogOpen=true" tabindex="{{vm.tabIndex || -1}}">
-    <div ng-if="!vm.$transclude.isSlotFilled('input') && vm.type != 'datepicker'">
+    <div ng-if="!vm.$transclude.isSlotFilled('input') && vm.type != 'datepicker' && vm.type != 'textarea'">
       <input
         type="{{vm.type}}"
         name="{{vm.bindName || vm.bindId}}"
@@ -10,6 +10,14 @@
         required="required"
         placeholder="{{vm.placeholder}}"
       />
+    </div>
+    <div ng-if="vm.type == 'textarea'">
+      <textarea
+        name="{{vm.bindName || vm.bindId}}"
+        id="{{vm.bindId}}"
+        ng-model="vm.model"
+        required="required"
+        >{{vm.placeholder}}</textarea>
     </div>
     <div ng-if="vm.type == 'datepicker'">
       <datepicker ng-init="vm.getCurrentDate()" date="vm.model">
@@ -22,7 +30,7 @@
       </datepicker>
     </div>
     <span ng-transclude="input" ng-if="vm.$transclude.isSlotFilled('input')"></span>
-    <span class="icon" ng-if="vm.icon || vm.iconClass" ng-class="vm.iconClass"><span ng-bind="vm.icon"></span></span>
+    <span class="icon" ng-if="(vm.icon || vm.iconClass) && !vm.type == 'textarea'" ng-class="vm.iconClass"><span ng-bind="vm.icon"></span></span>
 
     <div ng-if="vm.type == 'autoComplete'" dialog class="no-arrow left autocomplete" close="vm.modalClosed" is-open="vm.dialogOpens">
       <dialog-content>
