--- a/src/custom-input/custom-input.html
+++ b/src/custom-input/custom-input.html
@@ -9,6 +9,7 @@
         name="{{vm.bindName || vm.bindId}}"
         id="{{vm.bindId}}"
         ng-model="vm.model"
+        ng-disabled="vm.disabled"
         ng-required="vm.required"
         placeholder="{{vm.placeholder}}" />
     </div>
@@ -16,15 +17,19 @@
       <textarea name="{{vm.bindName || vm.bindId}}"
         id="{{vm.bindId}}"
         ng-model="vm.model"
+        ng-disabled="vm.disabled"
         ng-required="vm.required">{{vm.placeholder}}</textarea>
     </div>
     <div ng-if="vm.type == 'datepicker'">
       <datepicker ng-init="vm.getCurrentDate()"
-        date="vm.model">
+        date="vm.model"
+        disabled="vm.disabled">
         <input ng-if="!vm.$transclude.isSlotFilled('input') "
           class='datepicker-input'
           ng-click="$event.stopPropagation();"
           ng-model="vm.model"
+          ng-disabled="vm.disabled"
+          ng-required="vm.required"
           input-date />
         <i class="fa fa-calendar-o fa-fw"></i>
       </datepicker>
