Compile directive scope options

--- a/lib/message/message.html
+++ b/lib/message/message.html
@@ -29,7 +29,7 @@
           class="message-button">{{button.label}}</a>
         <span ng-if="button.type == 'html'"
           compile="{{button.html}}"
-          ctrl="button.ctrl">
+          scope="button.scope">
         </span>
       </span>
     </div>
